23 June 2004 Sylvain Pion
- Fix some issues with last change with g++ 2.95 and Intel.

21 June 2004 Sylvain Pion
- Add a test program for the concept checking library.

25 May 2004 Sylvain Pion
- Add LICENSE.BSL.

23 May 2004 Sylvain Pion
- Initial import of Boost 1.31.0.