@@ -1,3 +1,7 @@
+24 June 2004 Sylvain Pion
+- Attempt to fix issues with MipsPRO (size_t not in std::) by adding
+  #include <CGAL/basic.h> to test programs.
+
 23 June 2004 Sylvain Pion
 - Fix some issues with last change with g++ 2.95 and Intel.
 
